# zide

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
include/: app.h  colorswatch.h  editor.h  foo.h  init.h  menubar.h  theme.h  timeline.h  toolbar.h  undo_redo.h  utils.h
scripts/: rebuild_and_run_app.sh  run_app.sh
src/: app.cpp  colorswatch.cpp  editor.cpp  foo.cpp  init.cpp  main.cpp  menubar.cpp  theme.cpp  timeline.cpp  toolbar.cpp  undo_redo.cpp  utils.cpp
